# obsidian-indexer

./: .gitignore  Cargo.toml  LICENSE  README.md  Release-Plugin.ps1  build-installer.ps1  build.ps1  manifest.json  vault-index-search-release-notes.md  versions.json
.github/workflows/: ci.yml  obsidian-plugin-release.yml  release.yml
indexer/: Cargo.toml
indexer/src/: db.rs  index.rs  lib.rs  main.rs  walk.rs
indexer/src/extract/: docx.rs  epub.rs  markdown.rs  mod.rs  pdf.rs  text.rs
indexer/src/tray_daemon/: config.rs  mod.rs  ui.rs
indexer/tests/: db_fts.rs  docx_extract.rs  index_md.rs
installer/: obsidian-indexer.iss
plugin/: esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json
plugin/src/: main.ts  sqlWasm.ts  types.d.ts
